--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="Academic Free License v3.0"
 [[mods]]
 modId="beyondtheend"
 version="1.0.0"
-displayName="Beyond The End"
+displayName="Beyond the End"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
 displayURL="https://mcreator.net"
 authors="aahbr, MCreator"
